<resources>
    <string name="app_name">WeChat</string>
    <string name="login">login</string>
    <string name="registe">registe</string>
    <string name="user_name">userName</string>
    <string name="password">password</string>
    <string name="nick_name">nickName</string>
    <string name="password_confirm">password</string>
    <string name="tab_message">message</string>
    <string name="tab_contacts">contacts</string>
    <string name="tab_notice">notice</string>
    <string name="tab_me">me</string>
    <string name="introduction">introduction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>
