<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/tab_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/tabitem_margin_top"
                android:layout_width="@dimen/tabitem_size"
                android:layout_height="@dimen/tabitem_size"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_message"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/tabitem_margin_top"
                android:layout_width="@dimen/tabitem_size"
                android:layout_height="@dimen/tabitem_size"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_contacts"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/tabitem_margin_top"
                android:layout_width="@dimen/tabitem_size"
                android:layout_height="@dimen/tabitem_size"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_notice"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/tabitem_margin_top"
                android:layout_width="@dimen/tabitem_size"
                android:layout_height="@dimen/tabitem_size"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_me"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
