<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/login_padding_size"
            android:background="@color/login_title_bg"
            android:text="@string/login"/>
        <TextView
            android:id="@+id/registe_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/login_padding_size"

            android:text="@string/registe"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_content"
        android:layout_margin="@dimen/login_content_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/login_padding_size"
                android:text="@string/user_name"/>
            <EditText
                android:id="@+id/login_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/login_padding_size"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/bt_login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registe_content"
        android:layout_margin="@dimen/login_content_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/login_padding_size"
                android:text="@string/user_name"/>
            <EditText
                android:id="@+id/registe_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/login_padding_size"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/registe_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/login_padding_size"
                android:text="@string/password_confirm"/>
            <EditText
                android:id="@+id/registe_password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/login_padding_size"
                android:text="@string/nick_name"/>
            <EditText
                android:id="@+id/registe_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/login_padding_size"
                android:text="@string/introduction"/>
            <EditText
                android:id="@+id/registe_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/bt_registe"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registe"/>
    </LinearLayout>

</LinearLayout>
